--- a/src/scss/modal-complain.scss
+++ b/src/scss/modal-complain.scss
@@ -326,8 +326,8 @@ body.lock{
   display: flex;
   flex-direction: column;
   position: absolute;
-  left:100px;
-  top:300px;
+  left:0;
+  bottom:0;
   
 }
 
